--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Yang-Tai-250x250-1.jpg"
   bio              : "MSE in Biomedical Engineering at Johns Hopkins University"
   location         : "Baltimore, MD"
-  employer         :  "https://quantis.bme.jhu.edu/"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            : "wtai3@jh.edu"
